ETSL-892 Feature section Button alignment fixes

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/image/_features-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/image/_features-section.scss
@@ -56,12 +56,10 @@
     img {
       @include respond-to-min($tablet) {
         height: toRem(29);
-        margin: toRem(12) 0 toRem(16);
       }
 
       @include respond-to-min($desktop) {
         height: toRem(36);
-        margin: toRem(140) 0 toRem(32);
       }
     }
 
@@ -235,12 +233,10 @@
     img {
       @include respond-to-min($tablet) {
         height: toRem(29);
-        margin: toRem(60) 0 $margin-step-2;
       }
 
       @include respond-to-min($desktop) {
         height: toRem(36);
-        margin: toRem(140) 0 $margin-step-4;
       }
     }
 
@@ -319,10 +315,6 @@
   &.aqua-green--bg {
     .text {
       margin-top: 0;
-
-      @include respond-to-min($desktop) {
-        margin-top: toRem(150);
-      }
     }
 
     .cmp_store_btn {
@@ -807,18 +799,6 @@
       margin-left: 0;
     }
 
-    &.aqua-green--bg {
-      .text {
-        margin-top: toRem(120);
-      }
-    }
-
-    .cmp_btn {
-      img {
-        margin: toRem(28) 0 toRem(32);
-      }
-    }
-
     .image {
       .cmp-image__image {
         margin-top: 0;
@@ -836,22 +816,45 @@
       margin-left: 0;
     }
 
-    &.aqua-green--bg {
-      .text {
-        margin-top: toRem(120);
-      }
-    }
-
-    .cmp_btn {
-      img {
-        margin-top: toRem(108);
-      }
-    }
-
     .image {
       .cmp-image__image {
         margin-top: 0;
         top: toRem(-30);
+      }
+    }
+  }
+
+  &.cmp_text--feature-watch-flipped {
+    .cmp-container .aem-Grid {
+      @include respond-to-max($phone) {
+        display: block !important;
+      }
+    }
+  }
+}
+
+.cmp_text--feature-4-0,
+.cmp_text--feature-watch,
+.cmp_text--feature-watch-flipped {
+  .container {
+    .aem-Grid {
+      @include respond-to-min($tablet) {
+        display: flex;
+        flex-direction: column;
+        height: toRem(300);
+        justify-content: center;
+
+        .buttonstore {
+          padding: toRem(10) 0;
+        }
+      }
+
+      @include respond-to-min($desktop) {
+        height: toRem(420);
+
+        .buttonstore {
+          padding: toRem(20) 0;
+        }
       }
     }
   }
